--- a/apitwo/launchSettings.json
+++ b/apitwo/launchSettings.json
@@ -4,7 +4,7 @@
       "commandName": "DockerCompose",
       "composeLaunchAction": "LaunchBrowser",
       "composeLaunchServiceName": "apitwo",
-      "composeLaunchUrl": "{Scheme}://localhost:{ServicePort}/weatherforecast",
+      "composeLaunchUrl": "{Scheme}://localhost:{ServicePort}/test",
       "commandVersion": "1.0",
       "serviceActions": {
         "apitwo": "StartDebugging",
